--- a/react_recipebook/package.json
+++ b/react_recipebook/package.json
@@ -13,10 +13,15 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-event-timeline": "^1.6.3",
+    "react-redux": "^7.0.1",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-spinners-kit": "^1.9.0",
     "recharts": "^1.5.0",
+    "redux": "^4.0.1",
+    "redux-firestore": "^0.7.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
