--- a/react_recipebook/package.json
+++ b/react_recipebook/package.json
@@ -15,7 +15,7 @@
     "react-event-timeline": "^1.6.3",
     "react-redux": "^7.0.1",
     "react-redux-firebase": "^2.2.6",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.8",
     "react-spinners-kit": "^1.9.0",
     "recharts": "^1.5.0",
